# lstm-causality-tagger

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
lstm-causality/: BecauseData.cpp  BecauseData.h  BecauseOracleTransitionCorpus.cc  BecauseOracleTransitionCorpus.cpp  BecauseOracleTransitionCorpus.h  CMakeLists.txt  LSTMCausalityTagger.cc  LSTMCausalityTagger.cpp  LSTMCausalityTagger.h  Metrics.h  metrics-test.cpp  tagger-driver.cc  utilities.h
lstm-causality/tests/: CMakeLists.txt  metrics-test.cc  metrics-test.cpp
lstm-causality/tests/data/modified/: iaa_test_modified.trans
lstm-causality/tests/data/original/: iaa_test.trans
scripts/: clear-anns.sh  run_all_variants.sh  transition_oracle.py
